# IP_CU_LBM

./: .gitignore  Makefile  README.md  all.hpp  itemIndex.hpp  itemIndexmaker.py
1DFlood_object_20250919/: DiffusionWave.py  Element.py  MAIN (1).ipynb  MAIN.ipynb  MAIN_F0921.ipynb  MAIN_object3.py  Node.py  Plot.py  make_inputFile.py
1DFlood_object_20250919/pybind_version/: CMakeLists.txt  Makefile  make_gif.py  run.py
1DFlood_object_20250919/pybind_version/input/: sec_map.txt  width.txt  width2.csv
1DFlood_object_20250919/pybind_version/python_bindings/: Element_bindings.cpp  Node_bindings.cpp  Solver_bindings.cpp  bindings.cpp
1DFlood_object_20250919/pybind_version/src/: ElemNod.cpp  Element.cpp  Node.cpp  Solver.cpp  all.hpp  point.hpp
Boegman2005run18/: Boegman2005run18.cu  Makefile  a.out  make_VTK.py  make_figure.py
Boegman2005run18IB/: Boegman2005run18.cu  Boegman2005run18IB.cu  Makefile  make_figure_averun18.py
Cylindrical_Couette_flow/: C_D.csv  Makefile  cylindrical_couette_flow.cu  make_IB.py  make_VTK.py  make_figure.py
EllipticalFall/: EllipticalFall.cu  EllipticalFallxz.cu  Makefile  Suzuki_1.1theta.csv  a.out  make_VTK.py  make_ellipce.py  make_figure.py  x_H.csv  x_H.py
EllipticalFall2/: EllipticalFallxz.cu  Makefile  Suzuki_1.1y.csv  Suzuki_1.5theta.csv  Suzuki_1.5y.csv  ellipse_points_arclength.csv  make_IB.py  make_VTK.py  make_ellipce.py  x_H.csv  x_H.py  x_theta.csv  z_H.csv
Horn2001PF/: Horn2001PF copy.cu  Horn2001PF.cu  Makefile  a.out  make_figure.py
Horn2001S/: HornS.cu  Makefile  a.out
J_Zhou_solitary_wave3/: Makefile  Zhou_soliton3 copy.cu  Zhou_soliton3.cu  a.out  make_VTK.py
LockExchange/: a.out  (+4 more)
pybind_LockExchange/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  kernel.cu  run.py  wrapper.cpp
(+267 files in other folders)
